--- a/templates/credits.html
+++ b/templates/credits.html
@@ -17,13 +17,16 @@
         e delle infrastrutture connesse.
         <section id="finanzi">
                 <h3>Finanziamenti</h3>
-                <p>Fondo ricerca di base dell'Università di Verona.
+                <p>I finanziamenti per l'allestimento del laboratorio e per il personale tecnico
+                    provengono dal fondo ricerca di base dell'Università di Verona.
                 </p>
         </section>
 
         <section id="acquisi">
         <h3>Acquisizioni</h3>
-        Le acquisizioni dei manoscritti.   
+        Le acquisizioni dei manoscritti sono state fatte in maggior parte dal 
+        Dr. Andrea Brugnoli. Le acquisizioni del manoscritto LXI sono state fatte dal
+        fotografo scientifico Vittorio Barra. 
         </section>
 
         <section id="strsito">
