Aggiunta ricerca composta

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,6 +32,10 @@
   })
   
   </script>
+
+{% block script_section %}
+{% endblock script_section %}
+
   </head>
 <!--         NAVBAR        -->
 {% include 'includes/navbar2.html' %}
