--- a/templates/search.html
+++ b/templates/search.html
@@ -1,4 +1,23 @@
 {% extends 'layout.html' %}
+
+{% block script_section%}
+  <script>
+  $( function() {
+    $( "#slider-range" ).slider({
+      range: true,
+      min: 200,
+      max: 1950,
+      values: [ 350, 1800  ],
+      slide: function( event, ui ) {
+        $( "#anno" ).val( ui.values[ 0 ] + " - " + ui.values[ 1 ] + " d.C.");
+      }
+    });
+    $( "#anno" ).val($( "#slider-range" ).slider( "values", 0 ) +
+      " - " + $( "#slider-range" ).slider( "values", 1 ) + " d.C."  );
+  } );
+  </script>
+{% endblock script_section %}
+
 {% block  body%}
 <div align="center">
  <h1> <font face="Adobe Song Std L"><b>I manoscritti della Biblioteca Capitolare di Verona</b></font></h1>
@@ -17,11 +36,52 @@
 </div>
 <div align="center">
 
+<!-- 
 <form method="POST" >
     <p><b>Ricerca per segnatura: </b><input type="text" name="search" required/></p>
     <p><input type="submit" name="submit" value="Cerca"/></p>
+ </form>
+ -->
+<div class="container">
+<form  method="POST" action="">
+	{{ form.csrf_token }}
+	<p>
+  	
+  	<label for="anno">Data: </label>
+  	
+  	<input type="text" name='anno' id="anno" style="border:0; color:#000000; font-weight:bold;">
+	</p>
 
-   </form>
+	<div id="slider-range" class="container-md"></div>
+
+	<br>
+
+    <div class="form-group">
+    {{ form.segnatura.label }} {{ form.segnatura }}
+   	</div>
+   	<br>	
+
+   	<div class="form-group">
+    {{ form.materiale.label }} {{ form.materiale }}
+	</div>	  
+	<br>
+
+    <div class="form-group">
+    {{ form.autore.label }} {{ form.autore }}
+    </div>
+    <br>
+
+    <div class="form-group">
+    {{ form.titolo.label }} {{ form.titolo }}
+   	</div>
+   	<br>
+
+    <input type="submit" value="Invia">
+</form>
+
+
+</div>
+
 </div>
 
 <br>
