--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,7 +9,7 @@
     <link href={{ url_for("static",filename="custom.css") }} rel="stylesheet" type="text/css" >
 
   <title>Capitolar-e</title>
-  <!--- Hints search-->
+  <!--- Hints search https://stackoverflow.com/questions/34704997/jquery-autocomplete-in-flask future upgrade https://stackoverflow.com/questions/3488016/using-html-in-jquery-ui-autocomplete-->
   <link href="//code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" rel="Stylesheet"></link>
   <script src="//code.jquery.com/jquery-2.2.0.min.js"></script>
   <script src="//code.jquery.com/ui/1.10.2/jquery-ui.js" ></script>
