--- a/templates/explore.html
+++ b/templates/explore.html
@@ -26,7 +26,7 @@ Il colore grigio indica invece, che il campo non è disponibile.
 <script id="1000">
     var xhr = new XMLHttpRequest()
     xhr.responseType = 'blob';
-    xhr.open('GET', "http://localhost:5006/biblioteca/autoload.js?bokeh-autoload-element=1000&bokeh-app-path=/biblioteca&bokeh-absolute-url=http://localhost:5006/biblioteca", true);
+    xhr.open('GET', "http://localhost:5006/bokehbiblioteca/autoload.js?bokeh-autoload-element=1000&bokeh-app-path=/bokehbiblioteca&bokeh-absolute-url=http://localhost:5006/bokehbiblioteca", true);
     
     xhr.onload = function (event) {
       var script = document.createElement('script'),
