--- a/static/custom.css
+++ b/static/custom.css
@@ -202,7 +202,42 @@ section.progetti.container {
 a.manifesturl {
     font-size: small;
 }
+/* Dimensione slider */
 
 #slider-range{
-  width: 400px;
+  width: 250px;
+}
+
+
+/* Tabella per ricerca avanzata  */
+.header-fixed {
+    width: 100% 
+}
+
+.header-fixed > thead,
+.header-fixed > tbody,
+.header-fixed > thead > tr,
+.header-fixed > tbody > tr,
+.header-fixed > thead > tr > th,
+.header-fixed > tbody > tr > td {
+    display: block;
+}
+
+.header-fixed > tbody > tr:after,
+.header-fixed > thead > tr:after {
+    content: ' ';
+    display: block;
+    visibility: hidden;
+    clear: both;
+}
+
+.header-fixed > tbody {
+    overflow-y: auto;
+    height: 350px;
+}
+
+.header-fixed > tbody > tr > td,
+.header-fixed > thead > tr > th {
+    width: 25%;
+    float: left;
 }
