--- a/templates/search.html
+++ b/templates/search.html
@@ -19,30 +19,25 @@
 {% endblock script_section %}
 
 {% block  body%}
-<div align="center">
- <h1> <font face="Adobe Song Std L"><b>I manoscritti della Biblioteca Capitolare di Verona</b></font></h1>
 
-<br>
-</div>
 
-<div class="container" id="ricerca">
-  <br>
 
-<div align="center">
-<!--    <h1>La Biblioteca Capitolare di Verona </h1> -->
-    <br>
-    <p><h2>In questa sezione è possibile ricercare dei manoscritti specifici tramite il sistema di ricerca della biblioteca oppure, se sei uno studioso, inserire un nuovo manoscritto catalogato e pronto per la consultazione.</h2></p>
-    <br><br>
-</div>
-<div align="center">
-
+<div class="container">
+<div class="row">
+   
+<div class="col-md-5">
 <!-- 
 <form method="POST" >
     <p><b>Ricerca per segnatura: </b><input type="text" name="search" required/></p>
     <p><input type="submit" name="submit" value="Cerca"/></p>
  </form>
  -->
-<div class="container">
+ <br>
+ <h3>Ricerca avanzata</h3>
+ <div class="alert alert-primary" role="alert">
+  La ricerca avanzata è basata sulla catalogazione dei beni secondo lo <a href="example.com">schema
+  proposto dal progetto Dascabida</a>.
+</div>
 <form  method="POST" action="">
 	{{ form.csrf_token }}
 	<p>
@@ -78,11 +73,107 @@
 
     <input type="submit" value="Invia">
 </form>
+</div>
+
+
+
+<!-- 
+*****
+
+RESULTS TABLE 
+
+*****
+ -->
+
+<div class="col">
+  <br>
+  <h3>Risultati</h3>
+  <div class="alert alert-warning" role="alert">
+    I risultati sono sulla base di 3 beni catalogati.
+  </div>
+
+    <table class="table table-striped header-fixed">
+      <caption>Trovati XX beni.</caption>
+      <thead>
+        <tr>
+          <th style="width: 15%">Segnatura</th>
+          <th style="width: 15%">Datazione</th>
+          <th style="width: 45%">Sommario </th>
+          <th style="width: 15%">Collocazione</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td style="width: 15%">XX</td>
+          <td style="width: 15%">400-500</td>
+          <td style="width: 45%"> Agostino De Civitate Dei.</td>
+          <td style="width: 15%"> [V 43 1]</td>
+        </tr>
+        <tr>
+          <td style="width: 10%">XX</td>
+          <td style="width: 10%">400-500</td>
+          <td style="width: 70%"> Agostino De Civitate Dei.</td>
+          <td style="width: 10%"> [V 43 1]</td>
+        </tr>
+        <tr>
+          <td style="width: 10%">XX</td>
+          <td style="width: 10%">400-500</td>
+          <td style="width: 70%"> Agostino De Civitate Dei.</td>
+          <td style="width: 10%"> [V 43 1]</td>
+        </tr>
+        <tr>
+          <td style="width: 10%">XX</td>
+          <td style="width: 10%">400-500</td>
+          <td style="width: 70%"> Agostino De Civitate Dei.</td>
+          <td style="width: 10%"> [V 43 1]</td>
+        </tr>
+        <tr>
+          <td style="width: 10%">XX</td>
+          <td style="width: 10%">400-500</td>
+          <td style="width: 70%"> Agostino De Civitate Dei.</td>
+          <td style="width: 10%"> [V 43 1]</td>
+        </tr>
+        <tr>
+          <td style="width: 10%">XX</td>
+          <td style="width: 10%">400-500</td>
+          <td style="width: 70%"> Agostino De Civitate Dei.</td>
+          <td style="width: 10%"> [V 43 1]</td>
+        </tr>
+        <tr>
+          <td style="width: 10%">XX</td>
+          <td style="width: 10%">400-500</td>
+          <td style="width: 70%"> Agostino De Civitate Dei.</td>
+          <td style="width: 10%"> [V 43 1]</td>
+        </tr>
+        <tr>
+          <td style="width: 10%">XX</td>
+          <td style="width: 10%">400-500</td>
+          <td style="width: 70%"> Agostino De Civitate Dei.</td>
+          <td style="width: 10%"> [V 43 1]</td>
+        </tr>
+        <tr>
+          <td style="width: 10%">XX</td>
+          <td style="width: 10%">400-500</td>
+          <td style="width: 70%"> Agostino De Civitate Dei.</td>
+          <td style="width: 10%"> [V 43 1]</td>
+        </tr>
+        <tr>
+          <td style="width: 10%">XX</td>
+          <td style="width: 10%">400-500</td>
+          <td style="width: 70%"> Agostino De Civitate Dei.</td>
+          <td style="width: 10%"> [V 43 1]</td>
+        </tr>
+
+
+      </tbody>
+    </table>
+</div>
 
 
 </div>
-
 </div>
+
+
 
 <br>
 
