--- a/templates/about.html
+++ b/templates/about.html
@@ -14,7 +14,8 @@
         </div>
         <div class="col-md-7 col-sm-6">
         <section id="scopo">
-            <h3>Scopo</h3>
+            <br>
+            <h1>Scopo del portale Capitolar-e</h1>
             <p>Questo sito contiene i contenuti digitali riguardanti la Biblioteca capitolare 
             di Verona raccolti e curati dall'Università di Verona. In questo portale è possibile accedere a dati relativi alla catalogazione dei beni librari ed alle digitalizzazioni dei manoscritti.
             </p>
@@ -23,43 +24,62 @@
             vi invitiamo a consultare <a href="http://bibliotecacapitolare.org/">il sito ufficiale della biblioteca Capitolare di Verona</a>. 
             </p>
         </section>
-            <section id="storia">
-            <h3>Storia del progetto</h3>
-            <p class="bd-lead">Il portale Capitolar-<b>e</b> è curato e mantenuto dall laboratorio <a href=https://sites.hss.univr.it/laboratori_integrati/laboratorio-lamedan/>LaMeDan</a>, parte
-            dei <a href=https://sites.hss.univr.it/laboratori_integrati/>laboratori integrati</a> dell'Università di Verona.
-            Questo portale è nato durante il  progetto DascabiDa per raccogliere e rendere accessibile il materiale digitalizzato
-            durante il progetto e formare la base per i progetti futuri. Il 19 Marzo 2019 l'Università di Verona ha firmato una convenzione 
-            con la biblioteca Capitolare di Verona per affiancarla nella gestione e valorizzazione dei beni culturali contenuti al suo intero.
-            </p>
-            </section>
-        <section class="container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/q8U-DiZHVUg?start=44" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <div class="bd-example">
+        </div>
+        <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=17AS0VmzVTH5n04pYBGr_E0vEuRFV87MkfrjzQk6zxg4&font=Default&lang=it&timenav_position=top&initial_zoom=1&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>  
+        
+        
+        <section id="storia" class="storia  py-5 ">
+            <div class="row align-items-center container py-5 mx-auto">
+                
+                <div class="text col-lg-6 col-md-12 col-12">
+                    <h6>DALLO STUDIO ALLA CONSERVAZIONE</h6>
+                    <h1>Storia del progetto</h1>
+                        <p class="bd-lead">Il portale Capitolar-<b>e</b> è curato e mantenuto dall laboratorio <a href=https://sites.hss.univr.it/laboratori_integrati/laboratorio-lamedan/>LaMeDan</a>, parte
+                        dei <a href=https://sites.hss.univr.it/laboratori_integrati/>laboratori integrati</a> dell'Università di Verona.
+                        Questo portale è nato durante il  progetto DascabiDa per raccogliere e rendere accessibile il materiale digitalizzato
+                        durante il progetto e formare la base per i progetti futuri. Il 19 Marzo 2019 l'Università di Verona ha firmato una convenzione 
+                        con la biblioteca Capitolare di Verona per affiancarla nella gestione e valorizzazione dei beni culturali contenuti al suo intero.
+                        </p>
+              </div>
+              <div class="img col-lg-6 col-md-12 col-12">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/q8U-DiZHVUg?start=44" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>       
+
             </div>
-        </section>
-        <section id="illaboratorio">
-            <h3>Il laboratorio.</h3>
-            <p>
-            L'Università dispone non solo di spazi virtuali ma anche di spazi fisici all'interno della biblioteca. La Biblioteca Capitolare
-            ospita, diversi locali gestiti dal laboratorio LaMeDan per la riproduzione,
-            analisi e consultazione dei beni.
-            </p>
-            <p>
-            Il laboratorio di analisi dei beni librari contiene strumentazione all'avanguardia per l'analisi
-            e la digitalizzazione dei beni culturali. Gli strumenti consentono non solo di digitalizzare ad
-            altissima risoluzione i beni della collezione, ma anche di indagarne lo stato conservativo e 
-            la tecnica esecutiva.
-            Di fondamentale importanza anche le analisi multispettrali che consentono spesso di rivelare
-            testo ormai illegibile. Maggiori informazioni sugli strumenti possono essere trovate nella <a href='./strumenti.html'>pagina dedicata</a>.
-            </p>
-        </section>
+            </div>
+          </section>
+
+        <section id="illaboratorio" class="illaboratorio  py-5 ">
+            <div class="row align-items-center container py-5 mx-auto">
+                <div class="img col-lg-6 col-md-12 col-12">
+                    <img class="img-fluid" src={{url_for('static',filename='imgs/lab_1.jpeg')}} alt="Immagine del laboratorio, e del sistema di digitalizzazione.">   
+                  </div>
+                  <div class="text col-lg-6 col-md-12 col-12">
+                    <h6>ANALIZZARE E DIGIALIZZARE I CODICI</h6>
+                    <h1>Il laboratorio</h1>
+                    <p>
+                        L'Università dispone non solo di spazi virtuali ma anche di spazi fisici all'interno della biblioteca. La Biblioteca Capitolare
+                        ospita, diversi locali gestiti dal laboratorio LaMeDan per la riproduzione,
+                        analisi e consultazione dei beni.
+                        </p>
+                        <p>
+                        Il laboratorio di analisi dei beni librari contiene strumentazione all'avanguardia per l'analisi
+                        e la digitalizzazione dei beni culturali. Gli strumenti consentono non solo di digitalizzare ad
+                        altissima risoluzione i beni della collezione, ma anche di indagarne lo stato conservativo e 
+                        la tecnica esecutiva.
+                        Di fondamentale importanza anche le analisi multispettrali che consentono spesso di rivelare
+                        testo ormai illegibile. Maggiori informazioni sugli strumenti possono essere trovate nella <a href='/strumenti'>pagina dedicata</a>.
+                        </p>
+                  </div>
+                </div>
+              </section>
+
         <section id="lasalacons">
             <h3>La sala consultazione.</h3>
             <p>
             Un'altro spazio fondamentale concesso all'Università di Verona è la sala consultazione.
             Dove gli studiosi hanno la possibilità di consultare i materiali in sicurezza.
             Accedendo ai servizi del sistema bibliotecario di ateneo e ad una connessione veloce
-            con i server che ospitano la ditial-library del progetto.
+            con i server che ospitano la digital-library del progetto.
             </p>
             <p>
  
