--- a/templates/includes/carousel.html
+++ b/templates/includes/carousel.html
@@ -6,21 +6,21 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="5000">
-        <img src={{url_for('static',filename='imgs/1.jpeg')}} class="d-block w-100" alt="...">
+        <img src={{url_for('static',filename='imgs/1.jpeg')}} class="d-block w-100" alt="Immagine della sala principale dalla Biblioteca Capitolare.">
         <div class="carousel-caption d-none d-md-block">
           <h5>La biblioteca Capitolare di Verona.</h5>
           <p>La biblioteca ha un patrimonio di oltre un migliaio di manoscritti alcuni risalenti ai primi secoli dopo Cristo.</p>
         </div>
       </div>
       <div class="carousel-item" data-bs-interval="5000">
-        <img src={{url_for('static',filename='imgs/2.jpeg')}} class="d-block w-100" alt="...">
+        <img src={{url_for('static',filename='imgs/2.jpeg')}} class="d-block w-100" alt="Immagine di un manoscritto digitalizzato ad alta risoluzione.">
         <div class="carousel-caption d-none d-md-block">
           <h5>Digitalizzazione dei beni librari.</h5>
           <p>Digitalizazioni con camere fino a 100 Mega Pixel, per preservare ogni minimo dettaglio.</p>
         </div>
       </div>
       <div class="carousel-item" data-bs-interval="5000">
-        <img src={{url_for('static',filename='imgs/3.jpeg')}} class="d-block w-100" alt="...">
+        <img src={{url_for('static',filename='imgs/3.jpeg')}} class="d-block w-100" alt="Immagine che mostra una pergamena alla luce visibile e ultravioletta riflessa ed il testo che diventa leggible con quest'ultima.">
         <div class="carousel-caption d-none d-md-block">
           <h5>Restituire il perduto.</h5>
           <p>Tecniche di imaging avanzato per leggere i testi non più leggibili.</p>
