--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -9,9 +9,9 @@
         	<div class="col-md-3 footer-brand animated fadeInLeft">
                 <h2>Capitolar-<b>e</b></h2>
                 
-                <p> Capitolar-e è gestito dal laboratorio <a href=https://sites.hss.univr.it/laboratori_integrati/laboratorio-lamedan/>LaMeDan</a>. 
-                    Non esitare a conntatarci per ulteriori informazioni.
-                    Il sito è costruito usando <a href="https://mdbootstrap.com">Bootstrap v.5 </a></p>
+                <p> Capitolar-e è gestito dal laboratorio <a class="bka" href=https://sites.hss.univr.it/laboratori_integrati/laboratorio-lamedan/>LaMeDan</a>. 
+                    Non esitare a contattarci per ulteriori informazioni.
+                    </p>
                 <p> Parte del materiale utilizzato potrebbe essere soggetto a copyright © 2021 </p>
             </div>
         	<div class="col-md-4 footer-nav animated fadeInUp">
