--- a/templates/index2.html
+++ b/templates/index2.html
@@ -12,7 +12,7 @@
         Questo sito ospita le risorse digitali del progetto.</p>
     </div>
     <div class="img col-lg-6 col-md-12 col-12">
-      <img class="img-fluid" src={{url_for('static',filename='imgs/unispiralecolori.svg')}}>  
+      <img class="img-fluid" src={{url_for('static',filename='imgs/unispiralecolori.svg')}} alt="Disegno esemplificativo con i nomi dei partecipanti del progetto.">  
     </div>
   </div>
 </section>
@@ -21,7 +21,7 @@
 <section id="esplora" class="esplora  py-5 ">
   <div class="row  align-items-center container py-5 mx-auto">
     <div class="img col-lg-6 col-md-12 col-12 ">
-        <script src={{url_for('static',filename="plotbib.js")}} id="6b9e92e7-4d69-4301-a924-c04fd2d341f7"></script>      
+        <script src={{url_for('static',filename="plotbib.js")}} id="6b9e92e7-4d69-4301-a924-c04fd2d341f7" alt="Grafico rappresentante le dimensioni ed il numero dei beni contenuti nella collezione."></script>      
     </div>
     <div class="text col-lg-6 col-md-12 order-first col-12">
       <h6>VISUALIZZA I DATI SULLA COLLEZIONE</h6>
@@ -43,7 +43,7 @@
       </p>
     </div>
     <div class="img col-lg-6 col-md-12 col-12">
-      <img class="img-fluid" src={{url_for('static',filename='imgs/tutorial.gif')}}>   
+      <img class="img-fluid" src={{url_for('static',filename='imgs/tutorial.gif')}} alt="Gif che mostra come ricercare un codice conoscendo la segnatura.">   
     </div>
   </div>
 </section>
