--- a/templates/strumenti.html
+++ b/templates/strumenti.html
@@ -9,8 +9,12 @@
             <p><b>Hardware:</b></p>
             <a href="#nikon">Sistema digitalizzazione Nikon D810</a>
             <a href="#rainbow">Sistema multispettrale PhaseOne RAINBOW</a>
+            <a href="#apollo">Camera per riflettografie Apollo</a>
+            <a href="#termocamera">Termocamera nel medio infarosso</a>
             <a href="#zeiss">Spettrometri Zeiss</a>
             <a href="#i1Pub">Sistema profilazione i1Publish Pro 3</a>
+
+            
             <a href="#targets">Targets per controllo e profilazione immagini</a>
             <br>
             <p><b>Software:</b></p>
@@ -26,15 +30,15 @@
                     Una fase molto importante del progetto è stata la scelta degli strumenti. Ad ogni
                     acquisto è preceduta una fase di analisi del mercato.
                     Per quanto riguarda gli strumenti di imaging abbiamo
-                    fatto sulle varie tecnologie disponibili come indicato da MINERVA [6, sez. 3.5].
-                    Durante il progetto abbiamo intolre sviluppato e reso disponibile software open-soruce
+                    analizzato varie tecnologie disponibili come indicato da <a href="https://www.minervaeurope.org/publications/MINERVA%20TG%202.0.pdf"> MINERVA</a>
+                    Durante il progetto abbiamo inoltre sviluppato e reso disponibile software open-source
                     come auspicato nelle stesse linee guida.
                     Per fare una scelta fattuale su gli strumenti abbiamo innanzitutto
                     acquistato degli standard che ci permettessero di valutare con metriche
-                    oggettive le performance come suggerito da MINERVA[6,sez. 3.5] e NARA[12, pag. 25]
+                    oggettive le performance come suggerito da <a href="https://www.minervaeurope.org/publications/MINERVA%20TG%202.0.pdf#page=29">MINERVA</a> e <a href="https://www.archives.gov/files/preservation/technical/guidelines.pdf#page=25">NARA</a>
                     invece che basarci sulle dichiarazioni dei rivenditori.
                     L’immagine è stata analizzata attraverso software specialistici come OpenDICE
-                    per la validazio-ne secondo le direttive FADGI e deltae.picturae.com per quanto
+                    per la validazione secondo le direttive FADGI e deltae.picturae.com per quanto
                     riguarda la validazione secondo le direttive FADGI e Metamorphoze.
                     Sono stati presi in considerazione i seguenti fattori in ordine di importanza:
                 <ol>
@@ -54,8 +58,9 @@
                     dei materiali in regioni dello spettro non visibili ad occhio nudo.
                 </p>
             </section>
+            <h3>Hardware</h3>
             <section id=nikon>
-                <h3>Sistema Nikon</h3>
+                <h4>Sistema Nikon</h4>
                 Il sistema di acquisizione basato su camera Nikon D810 e lente Sigma 50mm f/1.4 
                 comprende due flash Bowens ed un box per isolare l'acquisizione da 
                 interferenza ambientali. La camera ha un sensore di 36 MegaPixel, ed abbinata ai 
@@ -64,7 +69,7 @@
             </section>
             <section id=rainbow>
                 <br>
-                <h3>Sistema multi-spettrale PhaseOne RAINBOW</h3>
+                <h4>Sistema multi-spettrale PhaseOne RAINBOW</h4>
                 Il sistema di acquisizione PhaseOne RAINBOW è un sistema versatile che permette di acquisire
                 immagini fino a 100 MegaPixel sia in nella regione visibile che nel vicino ultravioletto ed infrarosso.
                 Il sistema è accoppiato con illuminazione LED. Le sorgenti LED Eureka Lights a banda spettrale ristretta 
@@ -76,6 +81,29 @@
                     Il sistema è racchiuso in un box in alluminio annodizatto nero,con teli ad alta
                     assorbanza nel UV e nell'infrarosso, per evitare interferenze ambientali esterne. 
                 </p>
+                
+            </section>
+
+              apollo">Camera per riflettografie Apollo</a>
+            <a href="#termocamera">Termocamera nel medio infarosso</a>
+            <section id=zeiss>
+                <br>
+                <h4>Spettrometri Zeiss</h4>
+                Il sistema di spettroscopia Zeiss della serie MCS 600 è composto da due moduli per misure 
+                colorimetriche e due moduli per misure qualitative da 400 fino a 2200 nm.
+                Le Lo spettrometro è dotato di due sfere integratrici e di un accessorio 
+                per misure con geometria 450/45°. Gli accessori vengono collegati agli 
+                spettrometri attraverso fibre ottiche. 
+                Permette di acquisire informazioni relative a sostanze presenti nella 
+                superficie del materiale.
+                
+            </section>
+            <section id=i1Pub>
+                <h4>Sistema profilazione i1Publish Pro 3</h4>
+                Il sistema di profilazione i1Publish Pro 3 permette di creare in modo rapido 
+                e facile profili personalizzati per fotocamere, monitor, proiettori digitali,
+                scanner e stampanti, garantendo sempre la precisione del colore, dall'acquisizione 
+                alla produzione finale. 
                 
             </section>
         </div>
