--- a/templates/credits.html
+++ b/templates/credits.html
@@ -37,6 +37,8 @@
         Armin Ronacher e la community del framework Flask. 
 
         Il sito è realizzato usando Bootstrap v.5 il template del footer è dell'utente sargbah84.
+
+        Le timline sono state create usando <a href='https://timeline.knightlab.com/'></a>timelinejs di knightlab di Northwestern University. 
         </section>
         
 
