--- a/templates/includes/navbar2.html
+++ b/templates/includes/navbar2.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/about" data-bs-target="#about">About</a>
+          <a class="nav-link active" aria-current="page" href="/about" data-bs-target="#about">Il progetto</a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="/esplora" data-bs-target="#esplora" data-target="#esplora">Esplora</a>
@@ -16,7 +16,8 @@
           </li>
       </ul>
       <form class="d-flex"  data-target="#vai" data-bs-target="#vai" action="{{ url_for('search') }}" method="POST">
-        <input class="form-control me-2 form-control input-lg" id="autocomplete" data-target="#vai" data-bs-target="#vai"   name="autocomplete" type="search" placeholder="Segnatura e.g. XXVIII" aria-label="Search">
+        <input class="form-control me-2 form-control input-lg" id="autocomplete" data-target="#vai" data-bs-target="#vai"   name="autocomplete" type="search" placeholder="e.g. XXVIII" aria-label="Search">
+        <label class="nvb" for="autocomplete">Ricerca per segnatura</label>
         <button class="btn btn-outline-success"  data-target="#vai" data-bs-target="#vai" type="submit">Vai</button>
       </form>
     </div>
