--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,27 @@
   <link href="//code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" rel="Stylesheet"></link>
   <script src="//code.jquery.com/jquery-2.2.0.min.js"></script>
   <script src="//code.jquery.com/ui/1.10.2/jquery-ui.js" ></script>
-  
+  <!--  myfavicon  -->
+  <link rel="shortcut icon" href="{{ url_for('static', filename='myfavicon.ico') }}">
+
+
+<link rel="apple-touch-icon"
+      sizes="180x180"
+      href="{{ url_for('static', filename='apple-touch-icon.png') }}">
+
+<link rel="icon"
+      type="image/png"
+      sizes="180x180"
+      href="{{ url_for('static', filename='myfavicon-32x32.png') }}">
+
+<link rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="{{ url_for('static', filename='myfavicon-16x16.png') }}">
+
+<link rel="manifest"
+      href="{{ url_for('static',filename='site.webmanifest')}}">
+
   <script type="text/javascript">
   $(function() {
       $("#autocomplete").autocomplete({
