--- a/templates/credits.html
+++ b/templates/credits.html
@@ -38,7 +38,7 @@
 
         Il sito è realizzato usando Bootstrap v.5 il template del footer è dell'utente sargbah84.
 
-        Le timline sono state create usando <a href='https://timeline.knightlab.com/'></a>timelinejs di knightlab di Northwestern University. 
+        Le timlines sono state create usando <a href='https://timeline.knightlab.com/'></a>timelinejs di knightlab di Northwestern University. 
         </section>
         
 
