--- a/templates/index2.html
+++ b/templates/index2.html
@@ -1,4 +1,12 @@
 {% extends 'layout.html' %}
+{% block  script_section%}
+<script>
+window.onload = function(){ 
+  document.getElementById('focusbtn').onclick = function() {
+  document.getElementById('autocomplete').focus();
+  };};
+</script> 
+{% endblock script_section %}
 {% block  body%}
 {% include 'includes/carousel.html' %}
 <section id="about" class="about py-5 ">
@@ -20,7 +28,7 @@
 
 <section id="esplora" class="esplora  py-5 ">
   <div class="row  align-items-center container py-5 mx-auto">
-    <div class="img col-lg-6 col-md-12 col-12 ">
+    <div class="img col-lg-6 col-md-12 col-12 " alt="Grafico rappresentante le dimensioni ed il numero dei beni contenuti nella collezione.">
         <script src={{url_for('static',filename="plotbib.js")}} id="6b9e92e7-4d69-4301-a924-c04fd2d341f7" alt="Grafico rappresentante le dimensioni ed il numero dei beni contenuti nella collezione."></script>      
     </div>
     <div class="text col-lg-6 col-md-12 order-first col-12">
@@ -40,6 +48,9 @@
       <h1>Sai già cosa stai cercando?</h1>
       <p>Se sai già la segnatura del codice che stai cercando inseriscila sul
         campo segnatura e vai direttamente al bene che stai studiando! <i>Lege feliciter!</i>
+        <p>
+        <button id="focusbtn" type="button" class="btn btn-primary">Vai al campo segnatura</button>
+       </p>
       </p>
     </div>
     <div class="img col-lg-6 col-md-12 col-12">
