--- a/templates/index2.html
+++ b/templates/index2.html
@@ -14,9 +14,11 @@ window.onload = function(){
     <div class="text col-lg-6 col-md-12 col-12">
       <h6>IL PROGETTO</h6>
       <h1>Insieme per proteggere, digitalizzare e valorizzare</h1>
-      <p> Il laboratorio LaMeDan dell'Università di Verona in convenzione con la Fondazione Biblioteca Capitolare
-        ha iniziato una campagna di digitalizzazione e valorizzazione
+      <p> L'<a href=https://www.univr.it/it/>Università di Verona</a> in collaborazione con la <a href=http://bibliotecacapitolare.org/en/the-biblioteca-capitolare-of-verona/>Fondazione Biblioteca Capitolare </a>
+        ha iniziato una campagna di analisi, digitalizzazione e valorizzazione
         dei beni culturali contenuti all'interno della Biblioteca Capitolare di Verona.
+        Il progetto multidisciplinare coinvolge il <a href=https://www.dcuci.univr.it/>Dipartimento di Culture e Civiltà</a> ed il <a href=https://www.di.univr.it/>Dipartimento di Informatica</a>
+        insieme al <a href=https://www.univr.it/it/organizzazione/sistema-bibliotecario-di-ateneo/>Sistema Bibliotecario di Ateneo</a>.
         Questo sito ospita le risorse digitali del progetto.</p>
     </div>
     <div class="img col-lg-6 col-md-12 col-12">
@@ -25,6 +27,21 @@ window.onload = function(){
   </div>
 </section>
 
+<section id="lefasi" class="esplora  py-5 ">
+  <div class="row  align-items-center container py-5 mx-auto">
+    <div class="img col-lg-6 col-md-12 col-12 " alt="Grafico rappresentante le dimensioni ed il numero dei beni contenuti nella collezione.">
+      <img class="img-fluid" src={{url_for('static',filename="imgs/disegno_spagnoloarchivio_colori.svg")}}  alt="Grafico rappresentante le dimensioni ed il numero dei beni contenuti nella collezione."></script>      
+    </div>
+    <div class="text col-lg-6 col-md-12 order-first col-12">
+      <h6>IL PROGETTO</h6>
+      <h1>Tra antico e innovazione.</h1>
+      <p> Nella prima fase del progetto abbiamo progettato un nuovo sistema avanzato di catalogazione.
+        Abbiamo inoltre cominciato a rendere disponibili i dati raccolti nelle precedenti campagne di catalogazione (Catalogo storico di don Spagnolo) e digitalizzazione (Codice digitale degli archivi veronesi  a cura di Andrea Brugnoli).
+        )
+       </p>
+    </div>
+  </div>
+</section>
 
 <section id="esplora" class="esplora  py-5 ">
   <div class="row  align-items-center container py-5 mx-auto">
