Warning website under construction

--- a/templates/layoutBT2.html
+++ b/templates/layoutBT2.html
@@ -45,6 +45,14 @@
 <!--         NAVBAR        -->
 {% include 'includes/navbar2.html' %}
 <body data-bs-spy="scroll" data-bs-target="#navbarCapi" data-bs-offset="150" tabindex="0">
+  <br> <br>
+  <div class="alert alert-danger" role="alert">
+    <p>
+    Questo è un sito di prova con contenuti preliminari, le informazioni riportate potrebbero non essere accurate ed alcune funzionalità non essere disponibili.
+    </p><p>
+    This is a test website. The content might not be accurate and functional.
+  </p>
+  </div>
 {% block body %}
 {% endblock body %}
 
