--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="it">
   <head>
+    <!-- Se non commentato il sito non verra indicizzato -->
+    <meta name="robots" content="noindex">
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1 , shrink-to-fit=no">
@@ -55,6 +58,7 @@
 
 {% block script_section %}
 {% endblock script_section %}
+
 
   </head>
 <!--         NAVBAR        -->
