--- a/templates/layoutBT2.html
+++ b/templates/layoutBT2.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="it">
   <head>
-
+    <!-- Se non commentato il sito non verra indicizzato -->
+    <meta name="robots" content="noindex">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
      <!-- Bootstrap CSS -->
