--- a/templates/index2.html
+++ b/templates/index2.html
@@ -36,7 +36,8 @@ window.onload = function(){
       <h6>IL PROGETTO</h6>
       <h1>Tra antico e innovazione.</h1>
       <p> Nella prima fase del progetto abbiamo progettato un nuovo sistema avanzato di catalogazione.
-        Abbiamo inoltre cominciato a rendere disponibili i dati raccolti nelle precedenti campagne di catalogazione (Catalogo storico di don Spagnolo) e digitalizzazione (Codice digitale degli archivi veronesi  a cura di Andrea Brugnoli).
+        Abbiamo inoltre cominciato a rendere disponibili i dati raccolti nelle precedenti campagne di catalogazione (Catalogo storico di Antonio Spagnolo) 
+        e digitalizzazione (<i><a href="https://cdavr.dtesis.univr.it">Codice digitale degli archivi veronesi</a></i>, a cura di Andrea Brugnoli).
         
        </p>
     </div>
