Nuovo dizionario per autocompelte e risultati

--- a/templates/searchBT.html
+++ b/templates/searchBT.html
@@ -89,7 +89,7 @@ RESULTS TABLE
   <br>
   <h3>Risultati</h3>
   <div class="alert alert-warning" role="alert">
-    I risultati sono sulla base di 3 beni catalogati.
+    Risultati preliminari sulla base di 3 beni catalogati.
   </div>
 
   <div class="container">
