Aggiunto link ai risultati e visualizzazione url

--- a/templates/risultati2.html
+++ b/templates/risultati2.html
@@ -78,7 +78,7 @@
             <tr><td><b>Autore: </b></td><td>{{field['autore']}}</td></tr>
             <tr><td><b>Titolo: </b></td><td>{{field['titolo']}}</td></tr>
             <tr><td><b>Id: </b></td><td>{{field['id']}}</td></tr>
-            <tr><td><b>Incipit: </b></td><td><a href="http://lezioni.meneghetti.univr.it:8085/?manifest=http://lezioni.meneghetti.univr.it//manifests/b698a7d2668205fbe7cd023e0ded1784.json&indx=12" target="_blank">{{field['incipit']}}</a></td></tr>
+            <tr><td><b>Incipit: </b></td><td>{{field['incipit']}}  <a href={{field['incipit_url']}} class="falsebutton" target="_blank">Visualizza</a></td></tr>
             <tr><td><b>Explicit: </b></td><td>{{field['explicit']}}</td></tr>
             <tr><td><b>Carte: </b></td><td>{{field['carte']}}</td></tr>
             <tr><td><b>Rubrica: </b></td><td>{{field['rubrica']}}</td></tr>
