--- a/static/custom.css
+++ b/static/custom.css
@@ -262,3 +262,15 @@ a.manifesturl {
     width: 25%;
     float: left;
 }
+
+.falsebutton {
+    font: bold 11px Arial;
+    text-decoration: none;
+    background-color: #303030;
+    color: #fffbfb;
+    padding: 2px 6px 2px 6px;
+    border-top: 1px solid #CCCCCC;
+    border-right: 1px solid #333333;
+    border-bottom: 1px solid #333333;
+    border-left: 1px solid #CCCCCC;
+  }
